Preparado para entregar

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+<section class="section1">
+  <div class="relative">
+      <img class="brand-img" src="images/brand.png" alt="Instagram brand">
+    
+    <div >
 
-  Capture and Share the World's Moments
+        <button type="submit" class="button-edit">Log in</button>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+   </div>
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+</section>
+<section class="section2">
+  <div>
+    <img src="images/phones.png" alt="phone samples" class="phone-img">
+  </div>
+  <div class="padre">
+    <img src="images/frame.png" class="frame-img">
+    <div class ="text-box">
+      
+   <h1> Capture and Share <br>the World's Moments</br></h1>
 
-  Oh yeah, did we mention it's free?
+    <p class="paragraph">
+      <br>
+      Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+      </br>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </br>
+      <br>
+      Oh yeah, did we mention it's free?
+      </br> 
+    </p>
+    </div>
+    </div>
+  
+  </div>
+ 
+  <div>
+    <img src="images/badge-iphone.png" alt="App Store" class="app-store" >
+  </div> 
+  <div><img src="images/badge-android.png" alt="Google Play" class="google-play"></div>
+<div class="clearfix"></div>
+</section>
+<section class="section3">
+  <div class="footer">
+    <div class="f1">  ABOUT US </div>
+    <div class="f2"> SUPPORT </div>
+    <div class="f3"> BLOG </div>
+    <div class="f4">  PRESS </div>
+    <div class="f5">  API </div>
+    <div class="f6">  JOBS </div>
+    <div class="f7">  PRIVACY </div>
+    <div class="f8">  TERMS </div>
+    <div class="f9"> &copy; 2014 Instagram </div>
+  </div>
+</section>
+  
 </body>
 </html>
