--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" media="screen" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="container">
+    <div class="image-phone">
+      <img src="images/phones.png">
+    </div>
+    <div class="insta-def">
+      <div class="header">
+      <img src="images/brand.png" alt="brand-image" class="brand-image">
+      <a href="#" class="button"><img src="images/home.png">  Log in</a>
+      </div>
+      <div class="clearfix"></div>
+    <div class="text">
+    <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+    <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <img src="images/badge-iphone.png" alt="iphone-button">
+    <img src="images/badge-android.png">
+    </div>
+    </div>  
+  </div>
+  <footer>
+    <div class="footer">
+    <ul class="ul-el" >
+      <li class="list-el" >About Us</li>
+      <li class="list-el">Support</li>
+      <li class="list-el">Blog</li>
+      <li class="list-el">Press</li>
+      <li class="list-el">API</li>
+      <li class="list-el">Jobs</li>
+      <li class="list-el">Privacy</li>
+      <li class="list-el">Terms</li>
+    </ul>
+  <p>&copy; 2014 Instagram</p>
+    </div>
+  </footer> 
 </body>
 </html>
