--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,36 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="container1">
+    <div class="contPhone"><img src="images/phones.png" alt="Phones Image"></div>
+    <button class="botonLogin">Log in</button> 
+    <div class="container2">
+      <img src="images/brand.png" alt="brand image"> 
+        <div class="container3">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+          <br><br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br><br>Oh yeah, did we mention it's free?</p>
+        </div>
+    </div>
+    <div class="downImg"><img src="images/badge-iphone.png" alt="iphone download image">
+    <img src="images/badge-android.png" alt="android download image"></div>
+</div>
+<footer class="footer">
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Term</li>
+    <li class="copy">&copy; 2014 Instagram</li>
+  </ul>
+</footer>
 </body>
 </html>
