Couldnt make it work quite right. Zzz

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-  Instagram
+     <img src="images/bgtile.png" class="blue-tile">
 
-  Capture and Share the World's Moments
+  <div id="phones">
+    <img src="images/phones.png"></img>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="frame-resize">
+    <img src="images/frame.png"></img>
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="home">
+    <img src="images/home.png"></img>
+  </div>
 
-  Oh yeah, did we mention it's free?
+  <div class="brand">
+    <img src="images/brand.png"></img>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="paragraph">
+    <h1>Capture and Share the World's Moments</h1>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+         Take a picture or video, choose a filter to transform its look and feel, then post to 
+         Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and 
+         more. It's a new way to see the world. Oh yeah, did we mention it's free?
+      </p>
+  </div>  
 
-  &copy; 2014 Instagram
+  <div id="apple-store">
+    <img src="images/badge-iphone.png"></img>
+  </div>
+  
+  <div id="google-play">
+    <img src="images/badge-android.png"></img>
+  </div>
+
+<footer>
+  <div class="footer">
+    <a href="">AboutUs</a>
+     <a href="">Support</a>
+    <a href="">Blog</a>
+    <a href="">Press</a>
+    <a href="">API</a>
+    <a href="">Jobs</a>
+    <a href="">Privacy</a>
+    <a href="">Terms</a>
+      &copy;2014Instagram
+  </div> 
+</footer>
 </body>
 </html>
