--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="container">
+    <div class="phone">
+      <img class="phones_img" src="images/phones.png" alt="">
+    </div>
+    <div class="container_text">
+      <img src="images/brand.png" alt="">
+      <div class="paragraph">
+        <h1>Capture and Share <br> the World's Moments</h1>
+        <p>
+            Instagram is a fast, beautiful and fun way to share your life <br> with friends and family. <br><br>
 
-  Capture and Share the World's Moments
+            Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram &mdash; it's that easy. You can <br>
+            even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world. <br><br>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            Oh yeah, did we mention it's free?
+        </p>
+      </div>
+      <div>
+        <img class="iphone_img" src="images/badge-iphone.png" alt="">
+        
+      </div>  
+      <div>
+          <img src="images/badge-android.png" alt="">
+      </div>
+    </div>
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<footer class="footer">
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li>&copy; 2014 Instagram</li>
+  </ul>
+</footer>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
