--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" type="text/css" href="./css/main.css">
+<meta charset="UTF-8">
 <head>
   <title>Instagram</title>
 </head>
+
+
+
 <body>
-  Instagram
+<div class = "top">
+  <img src="./images/brand.png" alt="Instagram">
+</div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="img1"> <img src="./images/phones.png" alt="Iphone"></div>
+<div class="boxWithText">
+  <h1>Capture and Share the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Instagram is a fast, beautiful and fun way 
+  to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Take a picture or video, choose a filter to 
+  transform its look and feel, then post to Instagram &mdash; it's that easy. 
+  You can even share to Facebook, Twitter, Tumblr and more. 
+  It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <div>  
+  <img src="./images/badge-iphone.png" alt="Download on the App Store">
+  <img src="./images/badge-android.png" alt="Get it on Google Play"> 
+</div>
+</div>
 
-  &copy; 2014 Instagram
+
+  <footer class="footerInstagram">
+
+        <a href="">About Us</a>
+        <a href="">Support</a>
+        <a href="">Blog</a>
+        <a href="">Press</a>
+        <a href="">API</a>
+        <a href="">Jobs</a>
+        <a href="">Privacy</a>
+        <a href="">Terms</a>
+
+&copy; 2014 Instagram
+</footer>
+
+  
 </body>
 </html>
