--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="background">
+    <div class = "iphones">
+    <img src="./images/phones.png" alt="iPhones">
+    </div>
+  <div class="heading">
+    <img src="./images/brand.png" alt="Instagram">
+      <button><img src="./images/home.png" alt="home"><span>Log In</span></button>
+  </div>
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="bk-img"><img src="./images/frame.png" alt=""></div>
+  <div class="info">
+  <h3>Capture and Share the World's Moments</h3>
+    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong>  and <strong>fun</strong> way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="play">
+  <img src="./images/badge-iphone.png">
+  <img src="./images/badge-android.png" alt="Google Play">
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<footer>
 
-  Oh yeah, did we mention it's free?
+  <nav id ="foot">
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li class="copy">&copy; 2014 Instagram</li>
+</ul>
+</nav>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+</footer>
 </body>
 </html>
