html skeleton added

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,28 +4,34 @@
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="container">
 
-  Capture and Share the World's Moments
+    <div class="phone-image"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="right-content">
+      <h1>Instagram</h1>
+      <h3>Capture and Share the World's Moments</h3>
+      <p>
+        Instagram is a <strong>fast, beautiful </strong> and <strong>fun</strong> way to share your life with friends and family.
+        <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <br>Oh yeah, did we mention it's free?
+      </p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <img src="" alt="app-store">
+      <img src="" alt="play-store">
+    </div>
+  </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+      <a href="">About Us</a>
+      <a href="">Support</a>
+      <a href="">Blog</a>
+      <a href="">Press</a>
+      <a href="">API</a>
+      <a href="">Jobs</a>
+      <a href="">Privacy</a>
+      <a href="Terms"></a>
+      &copy; 2014 Instagram
+  </footer>
 </body>
 </html>
