--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type= "text/css" href="css/main.css">
 </head>
+<div>
 <body>
-  Instagram
+  <div class="top"></div>
 
-  Capture and Share the World's Moments
+<div id="bottom-white">
+  <div class="bottom-left">
+<img src="images/phones.png" alt="phone">
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div id="right-side-box" class="bottom-right">
+         <div id='logo-and-button' class="logo-and-b"> <img src="images/brand.png" alt="Instagram logo" class="logo">
+          <button class='btn' type="button"><img src="images/home.png"> Log in</button>
+        </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <div class="fade-box"><div class="fade-text">
 
-  Oh yeah, did we mention it's free?
+  <h1>Capture and Share the World's Moments</h1>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
+  <p>Oh yeah, did we mention it's free?</p></div></div>
+
+  <div id="buttons" class="badges">
+<img src="images/badge-iphone.png" alt="Download on the App Store">
+<img src="images/badge-android.png" alt="Get it on Google Play" class="r-badge">
+</div>
+
+</div>
+</div>
+<div class="clearfix"></div>
+
+<div class="bottom-links">
+  <a href="#">About Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
   &copy; 2014 Instagram
+</div>
+
+</div>
 </body>
+</div>
 </html>
