--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
   <div class="container">
@@ -17,8 +18,8 @@
         <br>Oh yeah, did we mention it's free?
       </p>
 
-      <img src="" alt="app-store">
-      <img src="" alt="play-store">
+      <img src="./images/badge-iphone.png" id="apple" alt="app-store">
+      <img src="./images/badge-android.png" id="android" alt="play-store">
     </div>
   </div>
 
@@ -31,7 +32,7 @@
       <a href="">Jobs</a>
       <a href="">Privacy</a>
       <a href="Terms"></a>
-      &copy; 2014 Instagram
+      <p>&copy; 2014 Instagram</p>
   </footer>
 </body>
 </html>
