--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,59 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="principal">
+    <div class="main container">
+      <div class="banner">
+        <img src="images/phones.png" alt="">
+      </div>
+      <div class="description">
+        <div class="nav-bar">
+          <img src="images/brand.png" alt="">
+          <a href="#">
+            <div class="btn">
+                <img src="images/home.png" alt="">
+                <span>Log in</span>
+            </div>
+          </a>
+        </div>
+        <div class="text-content">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            <span>
+              Instagram is a  <strong>fast</strong>,  <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+            </span>
+          </p>
+          <p>
+            <span>
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </span>
+          </p>
+          <p class="last-text">Oh yeah, did we mention it's free?</p>
+          <div class="btn-download">
+              <a href="#"><img src="images/badge-iphone.png" alt="app-store"></a>
+              <a href="#"><img src="images/badge-android.png" alt="google-store"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="container">
+      <ul>
+        <a href="#"><li>About Us</li></a>
+        <a href="#"><li>Support</li></a>
+        <a href="#"><li>Blog</li></a>
+        <a href="#"><li>Press</li></a>
+        <a href="#"><li>API</li></a>
+        <a href="#"><li>Jobs</li></a>
+        <a href="#"><li>Privacy</li></a>
+        <a href="#"><li>Terms</li></a> 
+        <li class="last-li">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </div>
 </body>
 </html>
