--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/main.css">
+    <meta charset="utf-8" />
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <section id="header"></section>
+  <section id="container">
+    <img src="./images/phones.png" class="phone-image" alt="iPhones using Instagram" />
+    <section id="outer-box"><img src="./images/brand.png" class="insta-img" />
+      <a href="#"><div id="home-button"><img src="./images/home.png" width="30px" alt="Home" /><p>Log in</p></div></a>
+<section id="box" style="background-image: url('./images/frame.png'); background-size: 100%; background-repeat: no-repeat;">
+  
+  <h3>Capture and Share<br /> the World's Moments</h3>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong>, and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
+ <a href="#"><img src="./images/badge-iphone.png" alt="Download on App Store" /></a>
+ <a href="#"><img src="./images/badge-android.png" alt="Download on Google Play" /></a>
+</section>
+</section>
 
-  Download on the App Store
-  Get it on Google Play
+</section>
+<section id="footer">
+  <ul>
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">Support</a></li>
+  <li><a href="#">Blog</a></li>
+  <li><a href="#">Press</a></li>
+  <li><a href="#">API</a></li>
+  <li><a href="#">Jobs</a></li>
+  <li><a href="#">Privacy</a></li>
+  <li><a href="#">Terms</a></li>
+  <li><span class="gray">&copy; 2014 Instagram</span></li>
+</ul>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </section>
 </body>
 </html>
