--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,63 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="background"></div>
+  <div class="content">
+    <img class="celular" src="images/phones.png" alt="iPhone">
+    <div class="sub-container">
+      <div class="title">
+          <img class="brand" src="images/brand.png" alt="Brand">
+          <div class="button">
+            <img class="ico-home" src="images/home.png" alt="home" />
+            <span class="log-in">Log in</span>
+          </div>
+      </div>
+      <div class="text-box">
+        <h2>
+          Capture and Share the World's Moments
+        </h2>
+        <p>
+          Instagram is a <span class="bold">fast</span>, <span class="bold">beautiful</span> and <span class="bold">fun</span> way to share your life with friends and family.<br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>Oh yeah, did we mention it's free?
+        </p>
+        <img class="badge" src="images/badge-iphone.png" alt="Apple"/>
+        <img class="badge" src="images/badge-android.png" alt="Android"/>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <ul>
+      <li>
+        About Us
+      </li>
+      <li>
+        Support
+      </li>
+      <li>
+        Blog
+      </li>
+      <li>
+        Press
+      </li>
+      <li>
+        API
+      </li>
+      <li>
+        Jobs
+      </li>
+      <li>
+        Privacy
+      </li>
+      <li>
+        Terms
+      </li>
+      <li>
+        <span class="light">&copy; 2014 Instagram</span>
+      </li>
+    </ul>
+  </div>
 </body>
 </html>
