--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,71 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section class="header">
+  </section>
+  <section class="imagenes">
+    <img class="phones" src="images/phones.png" alt="smartphones">
+    <img class="logo" src="images/brand.png" alt="Instagram brand">
+    <img class="frameimg" src="images/frame.png" alt="frame">
+      <a href="#">
+          <img class="home" src="images/home.png" alt="home button"> 
+          Log In
+      </a>
+  </section>
+  <section class="contenido">
+    <h1>
+      Capture and Share <br>
+      the World's Moments
+    </h1>
+    <p>
+      Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <br>
+    <br>
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <br>     
+    <br>   
+      Oh yeah, did we mention it's free?
+    </p>
+    <a href="#">
+      <img class="iphoneb" src="images/badge-iphone.png" alt="descarga iphone">
+    </a>
+    <a href="#">
+    <img class="androidb" src="images/badge-android.png" alt="descarga android">
+  </a>
+  </section>
+  <section class="footer">
+      <ul>
+        <li>
+          About Us
+        </li>
+        <li>
+          Support
+        </li>
+        <li>
+          Blog
+        </li>
+        <li>
+          Press
+        </li>
+        <li>
+          API
+        </li>
+        <li>
+          Jobs
+        </li>
+        <li>
+          Privacy
+        </li>
+        <li>
+          Terms
+        </li>
+        <li>
+            &copy; 2014 Instagram
+        </li>
+      </ul>
+    </section>
 </body>
 </html>
