--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="header-blue"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="container">
+    <div class="left-article">
+      <img src="images/phones.png" alt="phones">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="right-article">
+      <div class="img-t">
 
-  Oh yeah, did we mention it's free?
+        <img class="ig-logo" src="images/brand.png" alt="instagram-logo">
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <button class="log-in">
+          <img src="images/home.png" alt="home">Log In</button>
+      </div>
 
-  &copy; 2014 Instagram
+      <div class="frame">
+        <h1 class="capture-header">Capture and Share
+          <br> the World's Moments</h1>
+
+        <p>Instagram is a
+          <span>fast</span>,
+          <span>beautiful</span> and
+          <span>fun</span> way to share your life with friends and family.</p>
+
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+
+        Oh yeah, did we mention it's free?
+
+        <div class="phone-badges">
+          <a href="#">
+            <img src="images/badge-iphone.png" alt="badge-iphone">
+          </a>
+          <a href="#">
+            <img src="images/badge-android.png" alt="badge-android">
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="clear"></div>
+
+    <footer>
+      <ul class="footer-ul">
+        <li class="footer-li">
+          <a href="#">About Us</a>
+        </li>
+        <li class="footer-li">
+          <a href="#">Support</a>
+        </li>
+        <li class="footer-li">
+          <a href="#">Blog</a>
+        </li>
+        <li class="footer-li">
+          <a href="#">Press</a>
+        </li>
+        <li class="footer-li">
+          <a href="#">API</a>
+        </li>
+        <li class="footer-li">
+          <a href="#">Jobs</a>
+        </li>
+        <li class="footer-li">
+          <a href="#">Privacy</a>
+        </li>
+        <li class="footer-li">
+          <a href="#">Terms</a>
+        </li>
+      </ul>
+
+      <span class="copyright">&copy; 2014 Instagram </span>
+    </footer>
+
+
+  </div>
+
 </body>
+
 </html>
