--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+  <title>Instagram by casher0009</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <header>
+    <img class= "phone" src="images/phones.png" alt="phone">
+    <img class= "title" src="images/brand.png" alt="title">
+  <div class="boton">
+    <img src="images/home.png" alt="home">
+    Log in
+  </div>
+</header>
+<section  class= "cubo">
+    <h2>Capture and Share the World's Moments</h2>
+    <div>
+<p>
+    Instagram is a <span> fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.
+  </p>
+<p>
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    </p>
+     <p> Oh yeah, did we mention it's free?</p>
+      
+    <img src="images/badge-iphone.png" alt="iphone"> 
+<img src="images/badge-android.png" alt="android">  </p>
+</div>
+</section>
+<div class= "navbar">
+  <ul>
+      <b> <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+</b>
+  <li><span class= "grey">&copy; 2014 Instagram</span></li>
+</ul>
+</div>
+</section>
 </body>
 </html>
