Instagram clone completed - 21:50 06/12/18

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <div class="top">
+      <div class="top-container">
+        <div class="top-indented-container">
+          <div class="instagram-name">
+          <img src="./images/brand.png"></div>
+          <div class="login-button"><img src="./images/login_button.png"></div>
+      </div>
+    </div>
+    </div>
+    <div class="bottom">
+      <div class="left-half">
+        <img src="./images/phones.png">
+      </div>
+      <div class="right-half">
+        <div class="text-container">
+          <div class="sub-text-container">
+            <div class="header">
+                <h1>Capture and Share the World's Moments</h1>
+            </div>
+            <div class="copy">
+              <p>Instagram is a <span class="bolded">fast</span>, <span class="bolded">beautiful</span> and <span class="bolded">fun</span> way to share your life with friends and family.
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              <p>Oh yeah, did we mention it's free?
+            </div>
+            <div class="apps-container">
+              <div class="app-store"><img src="./images/badge-iphone.png" alt="Download on the App Store"></div>
+              <div class="google-play"><img src="./images/badge-android.png" alt="Get it on Google Play"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+<footer>
+  <div class="footer">
+      <ul class="footer-ul"><li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li><span class="copyright">&copy; 2014 Instagram</span></li>
+      </ul>
+  </div>
+</footer>
 </body>
 </html>
