--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+<link rel="stylesheet" href="./css/main.css">
+ <html>
 
-  Capture and Share the World's Moments
+ <head>
+   <title>Instagram</title>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/main.css">
+ </head>
+ <body>
+  <div class="container">
+    <div class="left-container">
+      <img class="img1"src="images/phones.png">
+    </div>
+    <div class="right-container">
+ 
+      <div class="login-bar">
+        <img src="images/brand.png">
+        <div class="login-button">
+          <img src="images/home.png">Log in
+        </div>
+      </div>
+      <div class="card">
+        <h2>Capture and Share
+          <br>the World's Moments</h2>
+        <p>Instagram is a fast, beautiful and fun way to share your life
+          <br> with friends and family.</p>
+        <p>
+          Take a picture or video, choose a filter to transform its look 
+          <br> and feel, then post to Instagram &mdash; it's that easy. You 
+          <br> can even share to Facebook, Twitter, Tumblr and more. It 's a 
+          <br> new way to see the world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="store-buttons">
+          <img src="images/badge-iphone.png" class="appstore-button">
+          <img src="images/badge-android.png" class="appstore-button">
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class="footer-bar">
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    &copy; 2014 Instagram
+   </footer>
+ </body>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
-</html>
+</html> 
