--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8"/>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+<body>  
+  <header>
+      <img id="brand-logo" src="./images/brand.png" alt="Instagram">
+      <button><img id="house-icon" src="./images/home.png" alt="Login house image">Log in</button>  
+      <img id="phones" src="./images/phones.png" alt="Two Phones">  
+  
+    </header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section class="main">
+    <article class="container">
+        <h1>
+          <span>Capture and Share</span>   
+          the World's Moments
+        </h1>
+        <p>  
+          Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.  
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+        <img class="logos" src="./images/badge-iphone.png" alt="Download on the App Store"> 
+        <img clas="logos" src="./images/badge-android.png" alt="Get it on Google Play"> 
+    <div class="clearfix"></div>
+    </article>
+  </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+    <span>&copy; 2014 Instagram</span>
+  </footer>
 </body>
 </html>
