--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -24,9 +24,13 @@
         <p>
             Oh yeah, did we mention it's free?
         </p>
-        <img src="images/badge-iphone.png" alt="badge-iphone">
+        <img src="images/badge-iphone.png" alt="badge-iphone" class="iphone">
         <img src="images/badge-android.png" alt="badge-android">
-        <ul>
+             
+    </section>
+  </div>
+  <footer>
+      <ul>
           <li>
               About Us
           </li>
@@ -54,9 +58,7 @@
           <li>
               &copy; 2014 Instagram
           </li>
-        </ul>     
-    </section>
-  </div>
- 
+        </ul>
+  </footer>
 </body>
 </html>
