--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,71 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="blue-background">
+  </div>
+    <div class="container">
+      <img src="images/phones.png" alt="phones" class="phones">
+      <img src="images/brand.png" alt="Instagram brand" class="brand">
+      <a href="#" class="loginBtn">
+        <img src="images/home.png" alt="Login button">
+        Log in
+      </a>
+      <div class="mainText">
+        <h1>
+          Capture and Share 
+          <br>
+          the World's Moments
+        </h1>
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <br>
+        </p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+        <div class="downloadBtns">
+          <a href="#">
+            <img src="images/badge-iphone.png" alt="app store link" class="iphoneBtn">
+          </a>
+          <a href="#">
+            <img src="images/badge-android.png" alt="play store link">
+          </a>
+        </div>
+      </div>
+    </div>  
+  <div class="footer">
+    <span class="footerSeparator">
+      About Us
+    </span>
+    <span class="footerSeparator">
+      Support
+    </span>
+    <span class="footerSeparator">
+      Blog
+    </span>
+    <span class="footerSeparator">
+      Press
+    </span>
+    <span class="footerSeparator">
+      API
+    </span>
+    <span class="footerSeparator">
+      Jobs
+    </span>
+    <span class="footerSeparator">
+      Privacy
+    </span>
+    <span class="footerSeparator">
+      Terms
+    </span>
+    <div class="copyright">
+      &copy; 2014 Instagram
+    </div>
+  </div>
 </body>
 </html>
