--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+  <link rel= "stylesheet" href="./css/main.css">
+  <h5>
+    <img src="./images/bgtile.png" alt="fondo" width="1300 "height="50"/>
+  </h5>
+   <div class= "logo">
+    <title>Instagram</title>
+  </div>
 </head>
-<body>
-  Instagram
+ <section>
+      <div class="himg">
+      <h2>
+        Capture and Share the World's Moments
+      </h2>
+        <div class= "parrafo">
+          <p>
+         Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
+          </p>
+          <p>
+         Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+         Oh yeah, did we mention it's free?
+          </p>
+        </div>
+    </div>
+  </section>
+    <h3>
+      <img src="./images/badge-iphone.png" alt="apple"/>
+      <img src="./images/badge-android.png" alt="android"/>
+    </h3>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+    <h4>
+      <img src="./images/phones.png" alt="celulares"/>
+    </h4>
+<b>
+      <ul>
+        <li>
+          About Us
+        </li>
+        <li>
+          Support
+        </li>
+        <li>
+          Blog
+        </li>
+        <li>
+          Press
+        </li>
+        <li>
+          API
+        </li>
+        <li>
+          Jobs
+        </li>
+        <li>
+          Privacy
+        </li>
+        <li>
+          Terms
+        </li>
+        <li>
+          &copy; 2014 Instagram
+        </li>
+      </ul>
+    </b>
+    </section>
+ </body>
 </html>
