--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,64 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="../starter-code/css/main.css"
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div>
+ 
+  <div class="blueTop"></div>
+ 
+  <div class="contentBox">
+    <div class="phonePic">
+      <img src="../starter-code/images/phones.png" alt="Phone Displays">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="brandBox">
+      <img class="brandImg" src="../starter-code/images/brand.png" alt="Instagram Branding">
+      <button class="btnLogin" type="button" ><img src="../starter-code/images/home.png">Log In</button>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="textBox">
+      <div class="textContent">
+        <h2>Capture and Share <br>the World's Moments</h2>
 
-  Oh yeah, did we mention it's free?
+        <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+       
+      <div class="badges">
+        <img class="badgeIphone" src="../starter-code/images/badge-iphone.png" alt="App Store Badge">
+        <img class="badgeAndroid" src="../starter-code/images/badge-android.png" alt="Play Store Badge">
+      </div>   
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+</div>
+  
 
-  &copy; 2014 Instagram
+  <footer>
+
+    <div class="footerList">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>       
+        <li><span>&copy; 2014 Instagram</span></li> 
+      </ul>
+    </div>
+
+  </footer>
+  
+  
 </body>
+
+
 </html>
