--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,24 +6,25 @@
 </head>
 <body>
   <div class="container">
-
-    <div class="phone-image"></div>
-
-    <div class="right-content">
-      <h1>Instagram</h1>
-      <h3>Capture and Share the World's Moments</h3>
-      <p>
-        Instagram is a <strong>fast, beautiful </strong> and <strong>fun</strong> way to share your life with friends and family.
-        <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-        <br>Oh yeah, did we mention it's free?
-      </p>
-
-      <img src="./images/badge-iphone.png" id="apple" alt="app-store">
-      <img src="./images/badge-android.png" id="android" alt="play-store">
+      <img id="phones" src="./images/phones.png" alt="phones">
+      <div class="right-content">
+        <img src="./images/brand.png" alt="brand">
+          <div>
+            <h3>Capture and Share the World's Moments</h3>
+            <p>
+              Instagram is a <strong>fast, beautiful </strong> and <strong>fun</strong> way to share your life with friends and family.
+              <br><br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              <br><br>Oh yeah, did we mention it's free?
+            </p>
+            <img src="./images/badge-iphone.png" id="apple" alt="app-store">
+            <img src="./images/badge-android.png" id="android" alt="play-store">
+        </div>
+      </div>
     </div>
-  </div>
-
+<div>
+  <div class="links">
   <footer>
+    <strong>
       <a href="">About Us</a>
       <a href="">Support</a>
       <a href="">Blog</a>
@@ -32,7 +33,11 @@
       <a href="">Jobs</a>
       <a href="">Privacy</a>
       <a href="Terms"></a>
-      <p>&copy; 2014 Instagram</p>
+    </strong>
+      &copy; 2014 Instagram
   </footer>
+  </div>
+</div>
+</div>
 </body>
 </html>
