--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
+
+<div class="blue-background">
+</div>
+
+<div class="phone">
+    <img src="images/phones.png" alt="Phones">
+</div>
+<div class="top-bar">
+    <img src="./images/brand.png" alt="Instagram">
+    <img src="./images/home.png" alt="Home">
+</div>
+
+<div class="text-box">
+    <div class="title-text">
+        <h1>
+            Capture and Share<br>the World's Moments
+        </h1>
+    </div>
+    <div class="body-text">
+        <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your
+            life with friends and family.
+        </p>
+        <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+            that easy.
+            You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+            Oh yeah, did we mention it's free?
+        </p>
+    </div>
+    <div class="badges">
+        <img src="./images/badge-iphone.png" alt="Download on the App Store">
+        <img src="./images/badge-android.png" alt="Get it on Google Play">
+    </div>
+</div>
+
+<div class="bottom-bar">
+    <table border="0">
+        <tr>
+            <th>About Us</th>
+            <th>Support</th>
+            <th>Blog</th>
+            <th>Press</th>
+            <th>API</th>
+            <th>Jobs</th>
+            <th>Privacy</th>
+            <th>Terms</th>
+            <td>&copy; 2014 Instagram</td>
+        </tr>
+    </table>
+</div>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
