--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <link rel="stylesheet" href="/home/ajv/code/week1/lab-css-instagram-clone/starter-code/css/main.css">
+  <head>
+    <title>Instagram</title>
+  </head>
 
-  Capture and Share the World's Moments
+  <body>
+    <section id="blue-back">
+      <div id="insta-logo">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      </div>
+      <div id="insta-button">
+        <p id="btn-p">Log in</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+    </section>
+    <section id="white-back">
+      <div id="phones">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      </div>
+      <div id="p-background">
+          <h1>Capture and Share <br>the World's Moments</h1>
 
-  &copy; 2014 Instagram
+          <p > Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life <br>
+             with friends and family.<br>
+
+          Take a picture or video, choose a filter to transform its look <br>
+           and feel, then post to Instagram &mdash; it's that easy. You can <br>
+           even share to Facebook, Twitter, Tumblr and more. It's <br>
+           a new way to see the world.<br>
+           <br>
+
+          Oh yeah, did we mention it's free?
+
+          </p>
+          <div id="apple-log"></div>
+          <div id="google-log"></div>
+
+      </div>
+    </section>
+  <nav>
+    <ul>
+      <li><a href="">About Us</a></li>
+      <li><a href="">Support</a></li>
+      <li><a href="">Blog</a></li>
+      <li><a href="">Press</a></li>
+      <li><a href="">API</a></li>
+      <li><a href="">Jobs</a></li>
+      <li><a href="">Privacy</a></li>
+      <li><a href="">Terms</a></li>
+       <br>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </nav>
 </body>
 </html>
