Mad DE Antonio Esteban

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+<body style="
+background-image: url(https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/starter-code/images/bgtile.png);
+background-repeat: repeat-x;
+">
+  <div class="bodybox" style="
+padding:  100px;
+">
+    <div class="col body1a">
+      <img src="./images/phones.png">
+    </div>
+    <div class="col body2">
+      <div class="body2a">
+        <img src="./images/brand.png">
+      </div>
+      <div class="body2b">
+        
+      </div>
+      <div class="contenedortexto">
+        <div class="texto">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and
+        family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram — it's that
+        easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we
+        mention it's free?</>
+        </div>
+       </div>
+    <div class="body2c">
+      <img  src="./images/badge-iphone.png">
+    </div>
+    <div class="body2d">
+        <img  src="./images/badge-android.png">
+      </div>
+  </div>
+  </div>
+  </body>
+<footer>
+    <ul>
+      <li>About</li>
+      <li><Us/li>
+      <li>Support</li>
+      <li>Blog </li>
+      <li>Press</li>
+      <li>API</li> 
+      <li>Jobs </li>
+      <li>Privacy</li> 
+      <li>Terms</li>  
+      <li>© 2014 Instagram</li> 
+    </ul>
+</footer>
 </html>
