--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+<div class ="mainBody">
+<div class ="topBody"></div>
+  <div class = "phones">
+      <img src = "images/phones.png" class ="phoneImg">
+  </div>
 
-  Capture and Share the World's Moments
+  <div class = "instaInfo">
+      <div class = "instagram">
+        <div class ="brand"><img src = "images/brand.png"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <a href = "https://www.instagram.com/accounts/login/"> <button type="button" class = "login"> <img src = "images/home.png" class = "homeImage"><span class ="logintxt">Log in</span></button> </a>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </div>
+      <article class = "aboutInstagram">
+          <h3 class = "motto"> Capture and Share<br>the World's Moments </h3>
+          <div class = "pAbout">
+          <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          </div>
+      </article>
+      <div class ="storeLinks">
+      <a href = "https://www.apple.com/ios/app-store/"><img src = "images/badge-iphone.png"></a>
+      <a href = "https://play.google.com/store?hl=en"><img src = "images/badge-android.png"></a>
+      </div>
+  </div>
 
-  Oh yeah, did we mention it's free?
+  <footer class = "instagramLinks">
+      
+      <a href="https://www.instagram.com/about/us/" class = "links">About Us</a>
+      <a href="https://help.instagram.com/" class = "links">Support</a>
+      <a href="http://instagram.tumblr.com/" class = "links">Blog</a>
+      <a href="https://instagram-press.com/" class = "links">Press</a>
+      <a href="https://www.instagram.com/developer/" class = "links">API</a>
+      <a href="https://www.instagram.com/about/jobs/" class = "links">Jobs</a>
+      <a href="https://help.instagram.com/155833707900388" class = "links">Privacy</a>
+      <a href="https://help.instagram.com/478745558852511" class = "links">Terms</a>
+    
+    <span class ="copyrightInsta">&copy; 2014 Instagram</span>
 
-  Download on the App Store
-  Get it on Google Play
+  </footer>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+</div>
 </body>
 </html>
